--- a/etc/catalog/hive.properties
+++ b/etc/catalog/hive.properties
@@ -6,6 +6,5 @@ hive.s3.aws-access-key=minio
 hive.s3.aws-secret-key=minio123
 hive.non-managed-table-writes-enabled=true
 hive.s3select-pushdown.enabled=true
-hive.storage-format=ORC
-
-hive.allow-drop-table=true
+hive.storage-format=PARQUET
+hive.security=allow-all
