--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,6 +24,14 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "dbt_packages"
 
 
+models:
+  projet_dbt:
+    bronze:
+      +schema: bronze
+    silver:
+      +schema: silver
+
+
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
