--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,16 @@ services:
       - ./etc:/etc/trino
     networks:
       - trino-network
+  
+  clickhouse:
+    image: bitnami/clickhouse:latest
+    ports : 
+      - '8123:8123'
+    environment:
+      - CLICKHOUSE_ADMIN_PASSWORD=password123
+        CLICKHOUSE_HTTP_PORT=8123
+    networks:
+      - trino-network
 
   mariadb:
     image: 'mariadb:latest'
