--- a/models/bronze/sources.yml
+++ b/models/bronze/sources.yml
@@ -6,3 +6,9 @@ sources:
     schema: weather
     tables:
       - name: weather
+
+  - name: sourcesilever
+    database: lakehouse
+    schema: silver
+    tables:
+      - name: weathersil
