--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -28,8 +28,14 @@ models:
   projet_dbt:
     bronze:
       +schema: bronze
+      +materialized: table
     silver:
       +schema: silver
+      +materialized: table
+      
+    gold:
+      +schema: gold
+      +materialized: table
 
 
 # Configuring models
