Commit fin etape Docker all

--- a/profiles.yml
+++ b/profiles.yml
@@ -7,7 +7,7 @@ projet_dbt:
       user: Trino
       password:  # required if method is ldap or kerberos
       catalog: lakehouse
-      host: localhost
+      host: trino
       port: 8080
       schema: bronze  # a faire essayer d'envoyer vers silver
       # table : weatheronepoint 
@@ -18,7 +18,7 @@ projet_dbt:
       user: Trino
       password:  # required if method is ldap or kerberos
       catalog: clickhouse
-      host: localhost
+      host: trino
       port: 8080
       schema: gold  # a faire essayer d'envoyer vers silver
 
