--- a/docker/dbt/Dockerfile
+++ b/docker/dbt/Dockerfile
@@ -3,3 +3,6 @@ FROM ghcr.io/dbt-labs/dbt-core:latest
 
 # Installer le plugin dbt-trino
 RUN pip install dbt-trino
+
+# # Installer Prefect
+# RUN pip install -U prefect
