--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,90 +5,86 @@ x-logging: &default-logging
     max-file: "5"
   driver: json-file
 services:
-  # trino:
-  #   image: 'trinodb/trino:latest'
-  #   hostname: trino-coordinator
-  #   ports:
-  #     - '8080:8080'
-  #   volumes:
-  #     - ./etc:/etc/trino
-  #   networks:
-  #     - trino-network
+  trino:
+    image: 'trinodb/trino:latest'
+    hostname: trino-coordinator
+    ports:
+      - '8080:8080'
+    volumes:
+      - ./etc:/etc/trino
+    networks:
+      - trino-network
 
 
-  # dbt:
-  #   build: /docker/dbt
-  #   hostname: dbt
-  #   networks:
-  #     - trino-network
-  #   environment:
-  #   - PREFECT_SERVER_API_HOST=0.0.0.0
-  #   - PREFECT_API_URL=http://0.0.0.0:4200/api
-  #   volumes:
-  #     - ./script/dbt-script.sh:/dbt-script.sh
-  #     - ./dbt_project.yml:/usr/app/dbt/dbt_project.yml
-  #     - ./profiles.yml:/usr/app/dbt/profiles.yml
-  #     - ./models:/usr/app/dbt/models
-  #     - ./macros:/usr/app/dbt/macros
-  #     - ./target:/usr/app/dbt/target
-  #     - ./prefectdemo_dbt.py:/usr/app/dbt/prefectdemo_dbt.py
-  #   entrypoint: ["/bin/bash", "/dbt-script.sh"]
+  dbt:
+    build: /docker/dbt
+    hostname: dbt
+    networks:
+      - trino-network
+    volumes:
+      - ./script/dbt-script.sh:/dbt-script.sh
+      - ./dbt_project.yml:/usr/app/dbt/dbt_project.yml
+      - ./profiles.yml:/usr/app/dbt/profiles.yml
+      - ./models:/usr/app/dbt/models
+      - ./macros:/usr/app/dbt/macros
+      - ./target:/usr/app/dbt/target
+    entrypoint: ["/bin/bash", "/dbt-script.sh"]
 
-  # clickhouse:
-  #   image: clickhouse/clickhouse-server
-  #   ports :
-  #     - '8123:8123'
-  #   environment:
-  #     - CLICKHOUSE_ADMIN_PASSWORD=password123
-  #     - ALLOW_EMPTY_PASSWORD=no
-  #   networks:
-  #     - trino-network
+  clickhouse:
+    image: clickhouse/clickhouse-server
+    ports :
+      - '8123:8123'
+    environment:
+      - CLICKHOUSE_ADMIN_PASSWORD=password123
+      - ALLOW_EMPTY_PASSWORD=no
+    networks:
+      - trino-network
 
-  # mariadb:
-  #   image: 'mariadb:latest'
-  #   hostname: mariadb
-  #   ports:
-  #     - '3306:3306'
-  #   environment:
-  #     MYSQL_ROOT_PASSWORD: admin
-  #     MYSQL_USER: admin
-  #     MYSQL_PASSWORD: admin
-  #     MYSQL_DATABASE: metastore_db
-  #   networks:
-  #     - trino-network
+  mariadb:
+    image: 'mariadb:latest'
+    hostname: mariadb
+    ports:
+      - '3306:3306'
+    environment:
+      MYSQL_ROOT_PASSWORD: admin
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: admin
+      MYSQL_DATABASE: metastore_db
+    networks:
+      - trino-network
 
-  # hive-metastore:
-  #   hostname: hive-metastore
-  #   image: 'bitsondatadev/hive-metastore:latest'
-  #   ports:
-  #     - '9083:9083' # Metastore Thrift
-  #   volumes:
-  #     - ./conf/metastore-site.xml:/opt/apache-hive-metastore-3.0.0-bin/conf/metastore-site.xml:ro
-  #   environment:
-  #     METASTORE_DB_HOSTNAME: mariadb
-  #   depends_on:
-  #     - mariadb
-  #   networks:
-  #     - trino-network
+  hive-metastore:
+    hostname: hive-metastore
+    image: 'bitsondatadev/hive-metastore:latest'
+    ports:
+      - '9083:9083' # Metastore Thrift
+    volumes:
+      - ./conf/metastore-site.xml:/opt/apache-hive-metastore-3.0.0-bin/conf/metastore-site.xml:ro
+    environment:
+      METASTORE_DB_HOSTNAME: mariadb
+    depends_on:
+      - mariadb
+    networks:
+      - trino-network
 
-  # minio:
-  #   hostname: minio
-  #   image: 'minio/minio:RELEASE.2022-10-24T18-35-07Z'
-  #   container_name: minio
-  #   ports:
-  #     - '9000:9000'
-  #     - '9001:9001'
-  #   volumes:
-  #     - minio-data:/mnt/data
-  #   environment:
-  #     MINIO_ROOT_USER: minio
-  #     MINIO_ROOT_PASSWORD: minio123
-  #     MINIO_ACCESS_KEY: minio
-  #     MINIO_SECRET_KEY: minio123
-  #     MINIO_VOLUMES: /mnt/data
-  #   command: minio server /mnt/data  --console-address ":9001"
-  #   networks:
-  #     - trino-network
+  minio:
+    hostname: minio
+    image: 'minio/minio:RELEASE.2022-10-24T18-35-07Z'
+    container_name: minio
+    ports:
+      - '9000:9000'
+      - '9001:9001'
+    volumes:
+      - minio-data:/mnt/data
+    environment:
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: minio123
+      MINIO_ACCESS_KEY: minio
+      MINIO_SECRET_KEY: minio123
+      MINIO_VOLUMES: /mnt/data
+    command: minio server /mnt/data  --console-address ":9001"
+    networks:
+      - trino-network
 
 
   init:
